added ironfoe and support for extra attacks proc now triggers a spell instead of a buff added ability to choose mh weapon fixed crit chance calculation to account for weapon skill

--- a/style.css
+++ b/style.css
@@ -5,7 +5,14 @@
     text-align: right;
 }
 
-#stats label {
+#items {
+    display: grid;
+    grid-template-columns: min-content min-content;
+    grid-column-gap: 10px;
+    text-align: right;
+}
+
+#stats label, #items label {
     white-space: nowrap;
 }
 
