--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+body {
+    display: grid;
+    grid-template-columns: min-content auto;
+    grid-column-gap: 10px;
+    font-family: sans-serif;
+}
+
 #stats {
     display: grid;
     grid-template-columns: min-content 50px;
@@ -17,7 +24,7 @@
     text-transform: capitalize;
 }
 
-#logContainer {
+.log {
     font-family:
         "SFMono-Regular",
         Consolas,
@@ -25,8 +32,28 @@
         Menlo,
         Courier,
         monospace;
-    font-size: 13px;
-    height: 300px;
+    font-size: 11px;
+    height: 250px;
     overflow-y: scroll;
-    border: 1px solid black;
+    border-bottom: 1px solid black;
+}
+
+#simsContainer {
+    display: grid;
+    grid-row-gap: 10px;
+    align-self: start;
+}
+
+.sim {
+    position: relative;
+    border: 3px solid #4CAF50;
+}
+
+.sim.paused {
+    border-color: #9e9e9e;
+}
+
+.chosenBuffs, .equipedItems {
+    font-size: 12px;
+    border-bottom: 1px solid black;
 }
