--- a/style.css
+++ b/style.css
@@ -1,44 +1,120 @@
+@charset "UTF-8";
+
+h2 {
+    margin: 0;
+    font-weight: initial;
+}
+
 body {
     display: grid;
     grid-template-columns: min-content auto;
+    align-items: start;
     grid-column-gap: 10px;
+    font-family: Verdana;
+    background-color: #262626;
+    color: #ebebeb;
+    font-size: 13px;
+}
+
+button {
+    outline: none;
+    background-color: #ffffff14;
+    border: none;
+    border-radius: 2px;
+    color: inherit;
+    cursor: pointer;
+    height: 26px;
+}
+
+button:hover:not(:active) {
+    background-color: #ffffff24;
+}
+
+select {
+    -webkit-appearance: none;
+    outline: none;
+    color: inherit;
+    border: none;
+    border-radius: 2px;
+    background-color: #ffffff1f;
     font-family: sans-serif;
+    font-size: 13px;
+    padding: 2px 5px;
+
+    background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%3E%3Cpolygon%20fill%3D%22%23aaaaaa%22%20points%3D%220%208%20100%208%2050%2092%22%2F%3E%3C%2Fsvg%3E');
+    background-size: auto 37%;
+    background-position: right 6px center;
+    background-repeat: no-repeat;
 }
 
 #race {
     text-transform: capitalize;
 }
 
-#stats, #buffs, #ai_settings, #fight_settings {
+#stats, #buffs, #ai_settings, #fight_settings, #items {
     display: grid;
     grid-template-columns: min-content min-content;
     grid-column-gap: 10px;
-    text-align: right;
-}
-
-#items {
-    display: grid;
-    grid-template-columns: min-content min-content;
-    grid-column-gap: 10px;
+    grid-row-gap: 2px;
     text-align: right;
 }
 
 label {
     white-space: nowrap;
     text-transform: capitalize;
+    align-self: center;
 }
 
 .log {
-    font-family:
-        "SFMono-Regular",
-        Consolas,
-        "Liberation Mono",
-        Menlo,
-        Courier,
-        monospace;
     font-size: 11px;
     height: 250px;
     overflow-y: scroll;
+}
+
+#runSim {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+}
+
+#instantSimStats {
+    display: grid;
+    grid-template-columns: min-content min-content;
+    text-align: right;
+    justify-content: left;
+    grid-column-gap: 10px;
+}
+
+#instantSimStats.old {
+    opacity: 0.5;
+}
+
+#instantSimStats h2 {
+    grid-column: 1/3;
+    justify-self: start;
+    font-size: 11px;
+}
+
+#myStats {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-column-gap: 10px;
+    align-items: center;
+}
+
+#myStats>div:nth-child(2n+1) {
+    justify-self: end;
+}
+
+#selectOptionsContainer, .sim, button, select {
+    box-shadow: inset 0px 1px 2px 0px #ffffff47, 0px 1px 6px 0px rgba(0, 0, 0, 0.15);
+}
+
+#selectOptionsContainer, .sim {
+    display: grid;
+    background-color: #3f3f3f;
+    border-radius: 3px;
+    padding: 8px;
+    grid-row-gap: 8px;
 }
 
 #simsContainer {
@@ -51,12 +127,18 @@ label {
 
 .sim {
     position: relative;
-    border: 3px solid #4CAF50;
     align-self: start;
 }
 
-.sim.paused {
-    border-color: #9e9e9e;
+.sim:not(.paused) button.pauseBtn {
+    background-color: #f97070;
+    color: black;
+}
+
+.simControlContainer {
+    display: grid;
+    grid-template-columns: 87px 87px auto;
+    grid-column-gap: 10px;
 }
 
 .chosenRace {
@@ -69,18 +151,14 @@ label {
 
 .chosenBuffs, .equipedItems {
     font-weight: lighter;
+    background-color: #8080804a;
+    padding: 4px;
+    border-radius: 2px;
 }
 
-.equipedItems {
-    border-bottom: 1px solid black;
-}
-
-.simStats {
-    display: grid;
-    grid-template-columns: min-content min-content;
-    white-space: nowrap;
-    grid-column-gap: 10px;
-    font-size: 13px;
+/* monospace font */
+.simStats, .log, #myStats>div:nth-child(2n), #instantSimStats {
+    white-space: pre;
     font-family:
         "SFMono-Regular",
         Consolas,
@@ -90,13 +168,15 @@ label {
         monospace;
 }
 
-.simStats>*:nth-child(2n-1) {
-    text-align: right;
+.simStats {
+    display: grid;
+    grid-template-columns: min-content min-content;
+    white-space: nowrap;
+    grid-column-gap: 10px;
 }
 
-.simStats>*::before {
-    font-family: sans-serif;
-    font-size: 12px;
+.simStats>*:nth-child(2n-1) {
+    text-align: right;
 }
 
 .dps {
@@ -126,5 +206,24 @@ label {
 }
 
 .closeBtn {
-    float: right;
+    justify-self: end;
+    box-shadow: none;
+    border: none;
+    background: none !important;
+    width: 20px;
+    height: 20px;
+    margin: 0;
+    padding: 0;
+    font-size: 22px;
+    opacity: 0.5;
+    transition: opacity 0.2s;
+}
+
+.closeBtn:hover {
+    opacity: 1;
+}
+
+.closeBtn::before {
+    content: '×';
+    line-height: 10px;
 }
